--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Great Britain -- History -- Henry VII, 1485-1509 -- Fiction'
 - !lcsh 'Historical fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Red Tavern
 url: http://www.gutenberg.org/ebooks/44182
